# lie-expression-detection

docs/: PROJECT_ANALYSIS.md
lie-detection-expression/: .gitignore  README.md  pyproject.toml  run.ps1
lie-detection-expression/data/: sample_openface_labeled.csv
lie-detection-expression/scripts/: wsl2_score_video.sh
lie-detection-expression/src/lie_detection_expression/: __init__.py  cli.py  config.py  data.py  features.py  inference.py  model.py  openface.py  score_cli.py  sentence_scoring.py  service.py  train.py
lie-detection-expression/src/lie_detection_expression/api/: main.py
lie-detection-expression/tests/: test_pipeline.py
