[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lie-detection-expression"
version = "0.1.0"
description = "Baseline pipeline for deception detection using OpenFace action units."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
lie-train = "lie_detection_expression.cli:train_main"
lie-score-sentences = "lie_detection_expression.cli:score_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
